Fix compilation issues on Java 10